fixed z-index issue

--- a/queries.css
+++ b/queries.css
@@ -113,6 +113,7 @@
         right: 0;
         background-color: #1F1755;
         transition: all 300ms ease;
+        z-index: 1000;
     }
 
     .nav-list.active {
