--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
     color: #1F1755;
     z-index: 10001;
     cursor: pointer;
-    font-size: 3rem;
+    font-size: 2.3rem;
 }
 
 /*.....HEADER-HERO.....*/
